# tmuxNOC

./: .gitignore  Dockerfile  KEYS.md  README.md  install.sh  pyproject.toml  remote_install_playbook.yml  telnet_tmux.conf  tmux.conf  tmux.remote.conf  tmux_noc.py  tmux_noc_bashrc
misc/: paste.cs
scripts/: kbdfix.sh  paste.sh  tmux_noc.py  yank.sh
